# 06-semantic-router

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
config/: policy.example.yaml  routes.example.yaml
dashboard/: Dockerfile  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/decisions/: page.tsx
dashboard/src/components/: ConfidenceChart.tsx  DecisionLog.tsx  RouteRegistry.tsx
dashboard/src/lib/: api.ts
dashboard/src/types/: index.ts
data/sample/: business_tools.yaml  sample_requests.json
docs/: API.md  ARCHITECTURE.md  CONFIDENCE.md  POLICY.md  ROUTING.md
semantic_router/: __init__.py  config.py  main.py
semantic_router/api/: decisions.py  health.py  router.py  routes.py
semantic_router/db/: __init__.py  models.py
semantic_router/embedding/: __init__.py  service.py
semantic_router/execution/: __init__.py  adapter.py  mock_tools.py
semantic_router/models/: __init__.py  decision.py  request.py  route.py
semantic_router/policy/: __init__.py  engine.py  fallback.py  permissions.py
semantic_router/routing/: __init__.py  classifier.py  registry.py  selector.py  semantic_matcher.py  shared.py
tests/: conftest.py  test_classifier.py  test_decisions.py  test_fallback.py  test_integration.py  test_policy.py  test_registry.py  test_semantic_matcher.py
(+1 files in other folders)
